# crash-watcher

./: Cargo.toml
.github/workflows/: ci.yml
src/: main.rs
