[package]
name = "crash-watcher"
version = "0.1.0"
edition = "2021"
authors = ["Ash (ashisbored) <ash.b.7558@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "4"
reqwest = { version = "0.11", features = ["rustls-tls", "gzip", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
